Stick emacs version limited of 27.1 since it's released out.

--- a/README.org
+++ b/README.org
@@ -31,6 +31,10 @@ Support platform:
 - Windows7/8/8.1/10 (fully support)
 - Darwin(MacOS) (feature limited)
 
+Support emacs version:
+
+- GNU Emacs 27.1 and higher
+
 For see full documents of the introduction of =entropy-emacs= please
 see [[file:elements/site-lisp/entropy-emacs-doc/org/entropy-emacs_introduction.org][here]].
 
